--- a/IaC/xpipe-cloud/pipelines-v1-rst-configmapvault/configmap.yaml
+++ b/IaC/xpipe-cloud/pipelines-v1-rst-configmapvault/configmap.yaml
@@ -1,13 +1,13 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: xpipe-vault-config
-  namespace: xpipe-dev
+  name: pipelines-v1-rst-configmapvault-config
+  namespace: xpipe-cloud
 data:
   VAULT_LOG_LEVEL: "info"
   VAULT_UI: "true"
-  VAULT_ADDR: "https://dev-vault-xpipe.sindria.org"
-  VAULT_API_ADDRESS: "https://dev-vault-xpipe.sindria.org"
+  VAULT_ADDR: "https://configmap-vault-xpipe.sindria.org"
+  VAULT_API_ADDRESS: "https://configmap-vault-xpipe.sindria.org"
   VAULT_DISABLE_MLOCK: "true"
   VAULT_MYSQL_PLAINTEXT_CONNECTION_ALLOWED: "true"
   VAULT_TLS_DISABLE: "true"
@@ -15,10 +15,10 @@ data:
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: xpipe-vault-backup-config
-  namespace: xpipe-dev
+  name: pipelines-v1-rst-configmapvault-backup-config
+  namespace: xpipe-cloud
 data:
   AWS_DEFAULT_REGION: "eu-central-1"
-  APP_NAME: "xpipe-vault"
+  APP_NAME: "pipelines-v1-rst-configmapvault"
   RESTORE_TAG: "latest"
   RESTORE_SCHEMA: ""
