--- a/IaC/xpipe-cloud/pipelines-v1-rst-configmapvault/service.yaml
+++ b/IaC/xpipe-cloud/pipelines-v1-rst-configmapvault/service.yaml
@@ -3,9 +3,9 @@ apiVersion: v1
 kind: Service
 metadata:
   labels:
-    app: xpipe-vault
-  name: xpipe-vault
-  namespace: xpipe-dev
+    app: pipelines-v1-rst-configmapvault
+  name: pipelines-v1-rst-configmapvault
+  namespace: xpipe-cloud
 spec:
   ports:
   - name: web
@@ -17,6 +17,6 @@ spec:
     protocol: TCP
     targetPort: 8201
   selector:
-    app: xpipe-vault
+    app: pipelines-v1-rst-configmapvault
   sessionAffinity: None
   type: ClusterIP
