--- a/IaC/xpipe-cloud/core-v1-fnd-policies/configmap.yaml
+++ b/IaC/xpipe-cloud/core-v1-fnd-policies/configmap.yaml
@@ -1,8 +1,8 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: xpipe-policies-config
-  namespace: xpipe-dev
+  name: core-v1-fnd-policies-config
+  namespace: xpipe-cloud
 data:
   JAVA_OPTS: "-Xmx512m"
   XPIPE_CORE_POLICIES_DB_DRIVER_CLASS_NAME: "com.mysql.cj.jdbc.Driver"
