--- a/IaC/xpipe-cloud/core-v1-fnd-policies/db.yaml
+++ b/IaC/xpipe-cloud/core-v1-fnd-policies/db.yaml
@@ -1,8 +1,8 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: xpipe-policies-db-config
-  namespace: xpipe-dev
+  name: core-v1-fnd-policies-db-config
+  namespace: xpipe-cloud
 data:
   MYSQL_MAX_CONNECTIONS: "500"
 ---
@@ -10,8 +10,8 @@ apiVersion: v1
 kind: Secret
 type: Opaque
 metadata:
-  name: xpipe-policies-db-secret
-  namespace: xpipe-dev
+  name: core-v1-fnd-policies-db-secret
+  namespace: xpipe-cloud
 stringData:
   MYSQL_ROOT_PASSWORD: "secret"
   MYSQL_DATABASE: "app"
@@ -22,9 +22,9 @@ apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
   labels:
-    app: xpipe-policies-db
-  name: xpipe-policies-db-pvc
-  namespace: xpipe-dev
+    app: core-v1-fnd-policies-db
+  name: core-v1-fnd-policies-db-pvc
+  namespace: xpipe-cloud
 #provisioner: kubernetes.io/aws-ebs
 spec:
   accessModes:
@@ -38,15 +38,15 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   labels:
-    app: xpipe-policies-db
-  name: xpipe-policies-db
-  namespace: xpipe-dev
+    app: core-v1-fnd-policies-db
+  name: core-v1-fnd-policies-db
+  namespace: xpipe-cloud
 spec:
   replicas: 1
   revisionHistoryLimit: 10
   selector:
     matchLabels:
-      app: xpipe-policies-db
+      app: core-v1-fnd-policies-db
   strategy:
     rollingUpdate:
       maxSurge: 25%
@@ -55,7 +55,7 @@ spec:
   template:
     metadata:
       labels:
-        app: xpipe-policies-db
+        app: core-v1-fnd-policies-db
     spec:
       containers:
       - env:
@@ -63,27 +63,27 @@ spec:
           valueFrom:
             configMapKeyRef:
               key: MYSQL_MAX_CONNECTIONS
-              name: xpipe-policies-db-config
+              name: core-v1-fnd-policies-db-config
         - name: MYSQL_ROOT_PASSWORD
           valueFrom:
             secretKeyRef:
               key: MYSQL_ROOT_PASSWORD
-              name: xpipe-policies-db-secret
+              name: core-v1-fnd-policies-db-secret
         - name: MYSQL_DATABASE
           valueFrom:
             secretKeyRef:
               key: MYSQL_DATABASE
-              name: xpipe-policies-db-secret
+              name: core-v1-fnd-policies-db-secret
         - name: MYSQL_USER
           valueFrom:
             secretKeyRef:
               key: MYSQL_USER
-              name: xpipe-policies-db-secret
+              name: core-v1-fnd-policies-db-secret
         - name: MYSQL_PASSWORD
           valueFrom:
             secretKeyRef:
               key: MYSQL_PASSWORD
-              name: xpipe-policies-db-secret
+              name: core-v1-fnd-policies-db-secret
         image: mysql:8
         imagePullPolicy: IfNotPresent
         livenessProbe:
@@ -98,7 +98,7 @@ spec:
           periodSeconds: 10
           successThreshold: 1
           timeoutSeconds: 1
-        name: xpipe-policies-db
+        name: core-v1-fnd-policies-db
         ports:
         - containerPort: 3306
           protocol: TCP
@@ -123,23 +123,23 @@ spec:
         terminationMessagePolicy: File
         volumeMounts:
         - mountPath: /var/lib/mysql
-          name: xpipe-policies-db-volume
+          name: core-v1-fnd-policies-db-volume
       dnsPolicy: ClusterFirst
       restartPolicy: Always
       schedulerName: default-scheduler
       terminationGracePeriodSeconds: 30
       volumes:
-      - name: xpipe-policies-db-volume
+      - name: core-v1-fnd-policies-db-volume
         persistentVolumeClaim:
-          claimName: xpipe-policies-db-pvc
+          claimName: core-v1-fnd-policies-db-pvc
 ---
 apiVersion: v1
 kind: Service
 metadata:
   labels:
-    app: xpipe-policies-db
-  name: xpipe-policies-db
-  namespace: xpipe-dev
+    app: core-v1-fnd-policies-db
+  name: core-v1-fnd-policies-db
+  namespace: xpipe-cloud
 spec:
   ports:
   - name: mysql
@@ -147,7 +147,7 @@ spec:
     protocol: TCP
     targetPort: 3306
   selector:
-    app: xpipe-policies-db
+    app: core-v1-fnd-policies-db
   sessionAffinity: None
   type: ClusterIP
 ---
@@ -155,8 +155,8 @@ spec:
 #kind: PersistentVolumeClaim
 #metadata:
 #  labels:
-#    app: xpipe-policies-db
-#  name: xpipe-policies-db
+#    app: core-v1-fnd-policies-db
+#  name: core-v1-fnd-policies-db
 #  namespace: example-cms
 #provisioner: rancher.io/local-path
 #spec:
