--- a/IaC/xpipe-cloud/core-v1-fnd-policies/secret.yaml
+++ b/IaC/xpipe-cloud/core-v1-fnd-policies/secret.yaml
@@ -2,9 +2,9 @@ apiVersion: v1
 kind: Secret
 type: Opaque
 metadata:
-  name: xpipe-policies-secret
-  namespace: xpipe-dev
+  name: core-v1-fnd-policies-secret
+  namespace: xpipe-cloud
 stringData:
-  XPIPE_CORE_POLICIES_DB_CONNECTION_URL: "jdbc:mysql://xpipe-policies-db.xpipe-dev.svc.cluster.local:3306/app?autoReconnect=true&useUnicode=true&characterEncoding=UTF-8&allowMultiQueries=true&allowPublicKeyRetrieval=true&useSSL=false"
+  XPIPE_CORE_POLICIES_DB_CONNECTION_URL: "jdbc:mysql://core-v1-fnd-policies-db.xpipe-cloud.svc.cluster.local:3306/app?autoReconnect=true&useUnicode=true&characterEncoding=UTF-8&allowMultiQueries=true&allowPublicKeyRetrieval=true&useSSL=false"
   XPIPE_CORE_POLICIES_DB_USERNAME: "root"
   XPIPE_CORE_POLICIES_DB_PASSWORD: "secret"
