--- a/IaC/xpipe-cloud/core-v1-fnd-policies/service.yaml
+++ b/IaC/xpipe-cloud/core-v1-fnd-policies/service.yaml
@@ -3,9 +3,9 @@ apiVersion: v1
 kind: Service
 metadata:
   labels:
-    app: xpipe-policies
-  name: xpipe-policies
-  namespace: xpipe-dev
+    app: core-v1-fnd-policies
+  name: core-v1-fnd-policies
+  namespace: xpipe-cloud
 spec:
   ports:
   - name: web
@@ -13,6 +13,6 @@ spec:
     protocol: TCP
     targetPort: 8080
   selector:
-    app: xpipe-policies
+    app: core-v1-fnd-policies
   sessionAffinity: None
   type: ClusterIP
