--- a/Pipelines/V1/Collector/pipelines-v1-api-collector/docker-compose.local.yml
+++ b/Pipelines/V1/Collector/pipelines-v1-api-collector/docker-compose.local.yml
@@ -10,32 +10,23 @@ services:
     volumes:
       - "${BASE_PATH}/${PROJECT_PATH}/${CODE_PATH}:${APP_CODE_PATH}"
       - "${BASE_PATH}/${CORE_MODULE_PATH}/:${APP_CODE_PATH}/${CORE_VENDOR_PATH}"
-      - "${BASE_PATH}/${ACADEMY_MODULE_PATH}/:${APP_CODE_PATH}/${ACADEMY_VENDOR_PATH}"
-      #- "${BASE_PATH}/${AI_MODULE_PATH}/:${APP_CODE_PATH}/${AI_VENDOR_PATH}"
-      - "${BASE_PATH}/${CMDB_MODULE_PATH}/:${APP_CODE_PATH}/${CMDB_VENDOR_PATH}"
-      #- "${BASE_PATH}/${CMS_MODULE_PATH}/:${APP_CODE_PATH}/${CMS_VENDOR_PATH}"
-      - "${BASE_PATH}/${CRM_MODULE_PATH}/:${APP_CODE_PATH}/${CRM_VENDOR_PATH}"
-      - "${BASE_PATH}/${DOCS_MODULE_PATH}/:${APP_CODE_PATH}/${DOCS_VENDOR_PATH}"
-      - "${BASE_PATH}/${IAM_MODULE_PATH}/:${APP_CODE_PATH}/${IAM_VENDOR_PATH}"
-      - "${BASE_PATH}/${LAB_MODULE_PATH}/:${APP_CODE_PATH}/${LAB_VENDOR_PATH}"
-      - "${BASE_PATH}/${LOGGING_MODULE_PATH}/:${APP_CODE_PATH}/${LOGGING_VENDOR_PATH}"
-      - "${BASE_PATH}/${MONITORING_MODULE_PATH}/:${APP_CODE_PATH}/${MONITORING_VENDOR_PATH}"
       - "${BASE_PATH}/${PIPELINES_MODULE_PATH}/:${APP_CODE_PATH}/${PIPELINES_VENDOR_PATH}"
-      - "${BASE_PATH}/${SECURITY_MODULE_PATH}/:${APP_CODE_PATH}/${SECURITY_VENDOR_PATH}"
     hostname: "${APP_NAME}.local"
     environment:
       # Core envs
-      - XPIPE_CORE_PRODUCT_NAME=${XPIPE_CORE_PRODUCT_NAME}
-      - XPIPE_CORE_PRODUCT_VERSION=${XPIPE_CORE_PRODUCT_VERSION}
+      - CORE_PRODUCT_NAME=${CORE_PRODUCT_NAME}
+      - CORE_PRODUCT_VERSION=${CORE_PRODUCT_VERSION}
       - CORE_STOREVIEW_ITALIAN_TOGGLE=${CORE_STOREVIEW_ITALIAN_TOGGLE}
       # Pipelines envs
       - PIPELINES_GITHUB_ACCESS_TOKEN=${PIPELINES_GITHUB_ACCESS_TOKEN}
       - PIPELINES_ORCHESTRATOR_ACCESS_TOKEN=${PIPELINES_ORCHESTRATOR_ACCESS_TOKEN}
       - PIPELINES_CONFIGMAP_VAULT_ACCESS_TOKEN=${PIPELINES_CONFIGMAP_VAULT_ACCESS_TOKEN}
-      # Iam envs
-      - IAM_GROUPS_ACCESS_TOKEN=${IAM_GROUPS_ACCESS_TOKEN}
+      - PIPELINES_TEMPLATE_CATALOG_ACCESS_TOKEN=${PIPELINES_TEMPLATE_CATALOG_ACCESS_TOKEN}
+      - PIPELINES_COLLECTOR_ADMIN_USERNAME=${PIPELINES_COLLECTOR_ADMIN_USERNAME}
+      - PIPELINES_COLLECTOR_ADMIN_PASSWORD=${PIPELINES_COLLECTOR_ADMIN_PASSWORD}
+      - PIPELINES_COLLECTOR_BASE_URL=${PIPELINES_COLLECTOR_BASE_URL}
     ports:
-      - "8080:80"
+      - "8082:80"
     networks:
       default:
         ipv4_address: "${APP_IP_ADDRESS}"
